[gd_scene load_steps=16 format=3 uid="uid://c6b26ocqcl6pe"]

[ext_resource type="Texture2D" uid="uid://bmbqvmgehunbg" path="res://Sprites/v602-nunoon-32-rippednotes.jpg" id="1_8nfuu"]
[ext_resource type="PackedScene" uid="uid://bql6ql236tjj8" path="res://Scenes/box.tscn" id="2_2nbb7"]
[ext_resource type="Texture2D" uid="uid://75y0g40235nq" path="res://Sprites/green circle.png" id="3_vv5oe"]
[ext_resource type="Texture2D" uid="uid://o6t4wmtqysxd" path="res://Sprites/purple circle.png" id="4_5twdo"]
[ext_resource type="Script" path="res://Scripts/Music.gd" id="5_hllom"]
[ext_resource type="PackedScene" uid="uid://b0bjn5etbwo15" path="res://GoConductor/Scenes/GCConductor.tscn" id="6_y5qvp"]
[ext_resource type="PackedScene" uid="uid://cm3omklowcyyb" path="res://GoConductor/Scenes/GCTrackPlayer.tscn" id="7_dt6u4"]
[ext_resource type="AudioStream" uid="uid://omp6fij37wgb" path="res://Resorces/Audio/Snugnes Melody.mp3" id="8_cv33b"]
[ext_resource type="Texture2D" uid="uid://d1upamsrl5gv7" path="res://Resorces/Textures/buttons.tres" id="8_mi6dq"]
[ext_resource type="AudioStream" uid="uid://cvbbgqficodd1" path="res://Resorces/Audio/Snugnes Acompanyment1.mp3" id="9_vhr0w"]
[ext_resource type="AudioStream" uid="uid://nni7hm44y660" path="res://Resorces/Audio/Snugnes Acompanyment2.mp3" id="10_vlqir"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mujd6"]
radius = 500.0

[sub_resource type="AtlasTexture" id="AtlasTexture_hiuoj"]
atlas = ExtResource("8_mi6dq")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5i42"]
atlas = ExtResource("8_mi6dq")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_iob2t"]
atlas = ExtResource("8_mi6dq")
region = Rect2(512, 0, 256, 256)

[node name="World" type="Node2D"]

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -14.0
offset_top = -5.0
offset_right = 1421.0
offset_bottom = 1430.0
texture = ExtResource("1_8nfuu")
expand_mode = 4
metadata/_edit_lock_ = true

[node name="Box" parent="." instance=ExtResource("2_2nbb7")]
position = Vector2(480, 254)

[node name="Acompanyment1" type="Area2D" parent="."]
position = Vector2(903, 593)
scale = Vector2(0.6, 0.6)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Acompanyment1"]
texture = ExtResource("3_vv5oe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Acompanyment1"]
visible = false
shape = SubResource("CircleShape2D_mujd6")

[node name="Acompanyment2" type="Area2D" parent="."]
position = Vector2(902, 221)
scale = Vector2(0.6, 0.6)

[node name="Sprite2D" type="Sprite2D" parent="Acompanyment2"]
texture = ExtResource("4_5twdo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Acompanyment2"]
visible = false
shape = SubResource("CircleShape2D_mujd6")

[node name="Music" type="Node" parent="."]
script = ExtResource("5_hllom")

[node name="conductor" parent="Music" node_paths=PackedStringArray("lead_track") instance=ExtResource("6_y5qvp")]
bpm = 90
lead_track = NodePath("melody")

[node name="melody" parent="Music/conductor" instance=ExtResource("7_dt6u4")]
stream = ExtResource("8_cv33b")

[node name="bassAc" parent="Music/conductor" instance=ExtResource("7_dt6u4")]
stream = ExtResource("9_vhr0w")

[node name="drumAc" parent="Music/conductor" instance=ExtResource("7_dt6u4")]
stream = ExtResource("10_vlqir")

[node name="playButton" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 47.0
offset_top = 86.0
offset_right = 255.0
offset_bottom = 247.0
scale = Vector2(0.764803, 0.764803)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="playButton"]
position = Vector2(104, 82)
texture = SubResource("AtlasTexture_hiuoj")

[node name="pauseButton" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 50.0
offset_top = 348.0
offset_right = 258.0
offset_bottom = 509.0
scale = Vector2(0.776586, 0.776586)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="pauseButton"]
position = Vector2(104, 82)
texture = SubResource("AtlasTexture_v5i42")

[node name="stopButton" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 55.0
offset_top = 612.0
offset_right = 263.0
offset_bottom = 773.0
scale = Vector2(0.776586, 0.776586)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="stopButton"]
position = Vector2(104, 82)
texture = SubResource("AtlasTexture_iob2t")

[connection signal="body_entered" from="Acompanyment1" to="Music" method="_on_acompanyment_1_body_entered"]
[connection signal="body_exited" from="Acompanyment1" to="Music" method="_on_acompanyment_1_body_exited"]
[connection signal="body_entered" from="Acompanyment2" to="Music" method="_on_acompanyment_2_body_entered"]
[connection signal="body_exited" from="Acompanyment2" to="Music" method="_on_acompanyment_2_body_exited"]
[connection signal="button_down" from="playButton" to="Music" method="_on_play_button_button_down"]
[connection signal="button_down" from="pauseButton" to="Music" method="_on_pause_button_button_down"]
[connection signal="button_down" from="stopButton" to="Music" method="_on_stop_button_button_down"]
